--- a/models/sources/orders.yml
+++ b/models/sources/orders.yml
@@ -5,6 +5,6 @@ sources:
       - name: bronze_orders
         columns:
           - name: order_id
-            tests: [not_null, unique]
+            data_tests: [not_null, unique]
           - name: order_date_time
-            tests: [ not_null ]
+            data_tests: [ not_null ]
