--- a/models/sources/orders.yml
+++ b/models/sources/orders.yml
@@ -7,4 +7,4 @@ sources:
           - name: order_id
             data_tests: [not_null]
           - name: order_date_time
-            data_tests: [ not_null ]
+            data_tests: [ not_null, unique ]
